E2318: reimplement participants_controller.rb rspec tests
