# app/models/user.rb
@@ -3,6 +3,7 @@ class User < ApplicationRecord
   validates :name, presence: true
   validates :email, presence: true, format: { with: URI::MailTo::EMAIL_REGEXP }
   validates :password, presence: true, length: { minimum: 6 }
-
+  has_many :participants
+  has_many :assignment_participants
   belongs_to :role
 end
